Data Transfer modifier for Custom Normals always crashes #95987

Closed
opened 2022-02-23 11:18:51 +01:00 by Pavel Duong · 9 comments

System Information
Operating system: Arch Linux and Windows 10
Graphics card: Intel UHD 620 and NVIDIA GTX 1060 Super

Blender Version
Broken: 2746238dde66
Worked: 3cdbeb32d377

Caused by {59343ee1627f4c369e237cea201015b979da1540}

Short description of error

Having Data Transfer modifier on an object for Custom Normals causes a crash, regardless of whether the Mesh even has Auto Smooth turned on.

Here's the relevant crash log:
blender.crash.txt

Exact steps for others to reproduce the error

You can either try the blend file I have prepared using the last working version I had on hand:

data_transfer_crash.blend

Or do these following steps:

  1. Create a Cube and a Sphere
  2. Add Data Transfer modifier to the Cube
  3. Set the Data Transfer target to the Sphere
  4. Enable Custom Normals transfer in the modifier
  5. Witness the crash.

I have also prepared the video of said crash:
mesh_transfer_crash.mp4

**System Information** Operating system: Arch Linux and Windows 10 Graphics card: Intel UHD 620 and NVIDIA GTX 1060 Super **Blender Version** Broken: `2746238dde66` Worked: `3cdbeb32d377` Caused by {59343ee1627f4c369e237cea201015b979da1540} **Short description of error** Having Data Transfer modifier on an object for Custom Normals causes a crash, regardless of whether the Mesh even has Auto Smooth turned on. Here's the relevant crash log: [blender.crash.txt](https://archive.blender.org/developer/F12884005/blender.crash.txt) **Exact steps for others to reproduce the error** You can either try the blend file I have prepared using the last working version I had on hand: [data_transfer_crash.blend](https://archive.blender.org/developer/F12884009/data_transfer_crash.blend) Or do these following steps: 1. Create a Cube and a Sphere 2. Add Data Transfer modifier to the Cube 3. Set the Data Transfer target to the Sphere 4. Enable Custom Normals transfer in the modifier 5. Witness the crash. I have also prepared the video of said crash: [mesh_transfer_crash.mp4](https://archive.blender.org/developer/F12884008/mesh_transfer_crash.mp4)
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Caused by {59343ee1627f4c369e237cea201015b979da1540}

CC @HooglyBoogly

Caused by {59343ee1627f4c369e237cea201015b979da1540} CC @HooglyBoogly
Hans Goudey self-assigned this 2022-02-23 13:41:14 +01:00

This issue was referenced by 398538b914

This issue was referenced by 398538b914a3c7ff3cf845f4fe6b2bdbb47204cb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Thanks for the report and triaging.

Thanks for the report and triaging.
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95987
No description provided.