Fix T95987: Data transfer modifier custom normals crash

59343ee1627f4c369e missed one case of normals being
retrieved from polygon custom data instead of the normals API.
The fix is simple.